--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.3.16",
     "react": "^18.1.0",
@@ -13,6 +14,7 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^4.2.21",
     "react-whammy": "^1.0.4",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
