--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "@types/gifencoder": "^2.0.1",
+    "blob-stream": "^0.1.3",
+    "box-shadow-pixels": "^0.0.4",
+    "buffer": "^6.0.3",
+    "canvas": "^2.11.0",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.3.16",
+    "gif.js": "^0.2.0",
+    "gifencoder": "^2.0.1",
+    "immutable": "^4.2.4",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.1.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
@@ -18,12 +28,14 @@
     "react-whammy": "^1.0.4",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
